Thu Sep  8 07:33:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (id2ref): unmarked object is already dead while lazy
	  sweeping, and to it cannot come back since other objects
	  referred from it might have been freed already.

Wed Sep  8 03:48:00 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* ext/readline/README.ja:
	  Change encoding from EUC-JP to UTF-8

Wed Sep  8 02:59:00 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* test/rexml/test_encoding.rb:
	  Add require 'require 'rexml/document'

Wed Sep  8 02:53:00 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* ext/nkf/nkf-utf8/nkf.c:
	  Change encoding from ISO-2022 to UTF-8

Wed Sep  7 23:41:24 2011  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb, test/rexml/test_comment.rb:
	  allow a single hyphen in comment. [Bug #5278] [ruby-core:39289]
	  Reported by Thomas Fritzsche. Thanks!!!

Wed Sep  7 17:27:18 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/yaml.rb: explicitly specify ::Object to avoid the collision with
	  Syck::Object.

Tue Sep  6 21:06:49 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb (_run_suites): Now reports are written the
	  following order: Skip, Failure, Error. [Feature #5282]

	* test_sorting.rb: test for above.

	* test4test_sorting.rb: Ditto.

	* lib/test/unit.rb (run): Put RUBY_DESCIPTION before quitting.
	  [Feature #5282]

Tue Sep  6 21:13:47 2011  Masaya Tarui  <tarui@ruby-lang.org>

	* win32/Makefile.sub (INSNS): change command line option -Ks to -Ku
	  for generate *.inc. because insns.def encoding has been changed SJIS
	  to UTF-8. if $BASERUBY is 1.9, -Ks cause an error. [Feature #5128] 
	  (same as r33194)

Tue Sep  6 15:55:24 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (load_transcoder_entry): concatenate paths directly.

	* encoding.c (load_encoding): predefined encoding names are safe.
	  [ruby-dev:44469] [Bug #5279]

	* transcode.c (load_transcoder_entry): ditto.
