@@ -1,3 +1,8 @@
+Thu Sep  8 07:36:36 2011  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/syck/lib/syck/types.rb: use toplevel Syck.
+	  for the case someone define Syck::Syck (or YAML::Syck).
+
 Thu Sep  8 07:33:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* gc.c (id2ref): unmarked object is already dead while lazy
